--- a/src/services/NSE.Identidade.API/appsettings.Development.json
+++ b/src/services/NSE.Identidade.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-0EVGMVS;Initial Catalog=NerdStoreEnterprise;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Server=127.0.0.1,1433; Database=NerdStoreEnterprise; User Id=SA; Password=Magento99?"
   },
   "Logging": {
     "LogLevel": {
